--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,9 +1,41 @@
 body {
-  display: flex;
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  min-width: 100vw;
   align-items: center;
   justify-content: center;
   color: #fff;
   background: var(--gradient);
+
+  display: grid;
+  grid-template-rows: 1fr 4fr 1fr 1fr 2fr;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+}
+
+form {
+  grid-column: 1 / 3;
+}
+
+.main-weather {
+  grid-row: 2 / 3;
+  grid-column: 1 / 2;
+  justify-self: right;
+}
+
+.side-weather {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+  justify-self: left;
+}
+
+.address {
+  grid-column: 1 / 3;
+}
+
+.hourly-weather {
+  grid-column: 1 / 3;
+}
+
+.ten-days-weather {
+  grid-column: 1/3;
 }
