--- a/src/styles/sideWeather.css
+++ b/src/styles/sideWeather.css
@@ -3,4 +3,10 @@
   grid-template-rows: repeat(4, 1fr);
   justify-content: center;
   align-items: center;
+
+  font-size: 3rem;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+  min-height: 350px;
+  align-self: stretch;
 }
