--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,5 @@
 body {
+  min-width: none;
   min-height: 100vh;
   min-width: 100vw;
   align-items: center;
@@ -8,8 +9,11 @@ body {
 
   display: grid;
   grid-template-rows: 1fr 4fr 1fr 1fr 2fr;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 5fr 4fr;
   justify-items: center;
+  column-gap: 20px;
+
+  font-size: 1.1rem;
 }
 
 form {
