--- a/src/styles/sideWeather.css
+++ b/src/styles/sideWeather.css
@@ -1,12 +1,38 @@
 .side-weather {
-  display: grid;
-  grid-template-rows: repeat(4, 1fr);
-  justify-content: center;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 
   font-size: 3rem;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 10px;
-  min-height: 350px;
+  /* min-height: 350px; */
+  min-width: 400px;
   align-self: stretch;
+}
+
+.humidity,
+.precipitation,
+.windspeed,
+.uv-index {
+  display: flex;
+  padding: 0px 15px;
+  flex: 1;
+  align-items: center;
+}
+
+.humidity,
+.precipitation,
+.windspeed {
+  border-bottom: 1px solid var(--border);
+}
+
+.uv-index {
+  margin-top: -20px;
+}
+
+.side-weather .text {
+  font-size: 2rem;
+  color: rgba(255, 255, 255, 0.5);
+  margin-right: auto;
 }
