--- a/src/styles/address.css
+++ b/src/styles/address.css
@@ -2,10 +2,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 20px;
+  font-size: 3rem;
+  /* color: var(--border);
+  color: #000; */
 }
 
 .coord {
+  border-left: 5px solid #000;
+  padding-left: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 20px;
 }
