--- a/src/styles/tenDays.css
+++ b/src/styles/tenDays.css
@@ -2,10 +2,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 20px;
 }
 
 .day-div {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 5px;
+}
+
+.day-div .temp {
+  text-align: center;
 }
