--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -13,7 +13,9 @@ body {
   justify-items: center;
   column-gap: 20px;
 
-  font-size: 1.1rem;
+  font-size: 1rem;
+  letter-spacing: 0px;
+  font-family: "Noto Sans", sans-serif;
 }
 
 form {
@@ -42,4 +44,12 @@ form {
 
 .ten-days {
   grid-column: 1/3;
+}
+
+form {
+  font-size: 1.5rem;
+}
+
+button:hover {
+  opacity: 0.8;
 }
